---------------------------
  Jackdmp changes log
---------------------------

2007-02-14 Stephane Letz  <letz@grame.fr>
	
	* Better error checking in PortAudio driver.

2007-02-07 Stephane Letz  <letz@grame.fr>
	
	* Thom Johansen fix for port buffer alignment issues.

2007-02-05 Stephane Letz  <letz@grame.fr>
	
	* Add Pieter Palmers FreeBob driver.
	* Thibault LeMeur ALSA driver patch.

2007-01-31 Stephane Letz  <letz@grame.fr>

	* Use pthread_attr_setstacksize in JackPosixThread class.

2007-01-30 Stephane Letz  <letz@grame.fr>

	* New LockAllMemory and UnlockAllMemory functions.

2007-01-29 Stephane Letz  <letz@grame.fr>

	* More robust activation/deactivation code, especially in case of client crash.

2007-01-27 Stephane Letz  <letz@grame.fr>

	* Uses a time out value of 10 sec in freewheel mode (like jack).

2007-01-21 Stephane Letz  <letz@grame.fr>

	* More client debug code: check if the client is still valid in every JackDebugClient method, check if the library context is still valid in every API call.

2007-01-14 Stephane Letz  <letz@grame.fr>

	* Implement thread.h API.

2007-01-09 Stephane Letz  <letz@grame.fr>

	* New server/client data transfer model to fix a 64 bits system bug. Fix a device name reversal bug in ALSA driver.

2007-01-04 Stephane Letz  <letz@grame.fr>

	*  Add call to the init callback (set up using the jack_set_thread_init_callback API) in Real-Time and Notification threads. Define a new 'kActivateClient' notification. 

2007-01-02 Stephane Letz  <letz@grame.fr>

	* Internal cleanup.

2006-12-23 Stephane Letz  <letz@grame.fr>

	* shared_ports renamed to shared_graph.

2006-12-15 Stephane Letz  <letz@grame.fr>

	* Move client refnum management in JackEngine.

2006-12-12 Stephane Letz  <letz@grame.fr>

	* Tom Szilagyi memory leak fix in ringbuffer.c.

2006-11-29 Stephane Letz  <letz@grame.fr>

	* Correct JackWinEnvent::Allocate (handle the ERROR_ALREADY_EXISTS case). Correct JackEngine::ClientExternalNew.