@@ -2,6 +2,10 @@
   Jackdmp changes log
 ---------------------------
 
+2007-03-04 Stephane Letz  <letz@grame.fr>
+
+	* Dmitry Baikov patch for JackGraphManager.cpp.
+
 2007-02-14 Stephane Letz  <letz@grame.fr>
 	
 	* Better error checking in PortAudio driver.
